== 1.3.0 ==
Release date: July 20, 2020
* Enhancement: Updated admin panel UI
* Added: Advanced Accordion - Toggle icon alignment and few other styling options
* Fixed: Hotspots - Hotspot text was not visible on hover

== 1.2.9.5 ==
Release date: June 11, 2020
* Added: Image Hotspots - Border, border radius and box shadow options for image
* Fixed: Team Member Carousel - Email and phone icons were not working
* Added: Info Box - Minimum height option
* Added: Image Comparison - Added dynamic controls to image and labels

== 1.2.9.4 ==
Release date: May 7, 2020
* Added: Advanced Accordion - Title HTML tag option
* Fixed: Instagram Feed - Square images option was not working
* Fixed: Image Hotspots, Flipbox - Dynamic tags were not working
* Added: Icon List - Background color and hover colors for text

== 1.2.9.3 ==
Release date: April 20, 2020
* Added: Button width option
* Fixed: WPML compatibility was missing for some widgets
* Fixed: Gravity Forms CSS & JS files were loading on all pages
* Fixed: Link effects CSS issue
* Fixed: Title container HTML markup in Info Box and Info Box carousel widgets
* Fixed: Lightbox and Image Link options in Instagram Feed widget

== 1.2.9.2 ==
Release date: April 8, 2020
* Fixed: Hotspot icon was not showing in editor in Image Hotspots widget
* Added: Option to randomize logos in Logo Carousel widget
* Fixed: Input fields padding option was not working in Gravity Forms widget
* Fixed: Input focus background option was not working in Gravity Forms widget
* Enhancement: Added styling for dropdown option in Gravity Forms widget
* Updated: "Input & Textarea" section label to "Input, Textarea & Dropdown" in Gravity Forms widget
* Added: input focus color option in Gravity Forms widget

== 1.2.9.1 ==
Release date: March 30, 2020
* Fixed: PHP error in query control

== 1.2.9 ==
Release date: March 29, 2020
* Enhancement: Updated query controls in Content Ticker and Advanced Accordion widgets

== 1.2.8.7 ==
Release date: March 11, 2020