@@ -388,7 +388,7 @@ class PowerpackLitePlugin {
 			1
 		);
 	}
-	
+
 	public function get_promotion_widgets($config) {
 
         if (is_pp_elements_active()) {
@@ -400,7 +400,7 @@ class PowerpackLitePlugin {
         if (isset($config['promotionWidgets'])) {
             $promotion_widgets = $config['promotionWidgets'];
         }
-		
+
 		$pro_widgets = PP_Config::get_pro_widgets();
 
         $combine_array = array_merge($promotion_widgets, $pro_widgets);
@@ -408,7 +408,7 @@ class PowerpackLitePlugin {
         $config['promotionWidgets'] = $combine_array;
 
         return $config;
-    }	
+    }
 
 	protected function add_actions() {
 		add_action( 'elementor/init', [ $this, 'elementor_init' ] );
@@ -423,7 +423,7 @@ class PowerpackLitePlugin {
 
 		add_action( 'elementor/frontend/after_register_scripts', [ $this, 'enqueue_frontend_scripts' ] );
 		add_action( 'elementor/frontend/after_enqueue_styles', [ $this, 'enqueue_frontend_styles' ] );
-		
+
 		add_filter('elementor/editor/localize_settings', [$this, 'get_promotion_widgets']);
 	}
 
@@ -437,7 +437,7 @@ class PowerpackLitePlugin {
 		$this->add_actions();
 		Classes\UsageTracking::get_instance();
 	}
-	
+
 }
 
 if ( ! defined( 'POWERPACK_ELEMENTS_TESTS' ) ) {
